--- a/src/Locale/bn_BD/default.po
+++ b/src/Locale/bn_BD/default.po
@@ -2,3 +2,7 @@ msgid "Dashboard"
 msgstr "ড্যাশবোর্ড"
 msgid "Welcome"
 msgstr "স্বাগতম"
+msgid "Name English"
+msgstr "নাম (ইংরেজি)"
+msgid "Name Bangla"
+msgstr "নাম (বাংলা)"
