--- a/src/Locale/bn_BD/default.po
+++ b/src/Locale/bn_BD/default.po
@@ -6,3 +6,21 @@ msgid "Name English"
 msgstr "নাম (ইংরেজি)"
 msgid "Name Bangla"
 msgstr "নাম (বাংলা)"
+msgid "The office building has been saved."
+msgstr "অফিসের ভবন তৈরি সম্পন্ন হয়েছে"
+msgid "The office building could not be saved. Please, try again."
+msgstr "অফিসের ভবন তৈরি সম্পন্ন হয়নি"
+msgid "The office building has been updated."
+msgstr "অফিসের ভবন সফলভাবে সম্পাদন করা হয়েছে"
+msgid "The office building could not be updated. Please, try again."
+msgstr "অফিসের ভবন সম্পাদনা সম্পন্ন হয়নি "
+msgid "The office level has been saved."
+msgstr "অফিস লেভেল তৈরি সম্পন্ন হয়েছে"
+msgid "The office level could not be saved. Please, try again."
+msgstr "অফিস লেভেল তৈরি সম্পন্ন হয়নি"
+msgid "The office level has been updated."
+msgstr "অফিস লেভেলের তথ্যটি সফলভাবে হালনাগাদ করা হয়েছে"
+msgid "The office level could not be updated. Please, try again."
+msgstr "অফিস লেভেলের তথ্যটি  হালনাগাদ করা সম্ভব হয়নি"
+msgid "The office level could not be updated. Please, try again."
+msgstr "অফিস লেভেলের তথ্যটি  হালনাগাদ করা সম্ভব হয়নি"
