--- a/src/Locale/bn_BD/default.po
+++ b/src/Locale/bn_BD/default.po
@@ -6,6 +6,10 @@ msgid "Name English"
 msgstr "নাম (ইংরেজি)"
 msgid "Name Bangla"
 msgstr "নাম (বাংলা)"
+msgid "The office has been saved"
+msgstr "অফিসে সংরক্ষণ করা হয়েছে"
+msgid "The office could not be saved. Please, try again"
+msgstr "অফিসে সংরক্ষণ করা যায়নি. অনুগ্রহপূর্বক আবার চেষ্টা করুন"
 msgid "The office building has been saved."
 msgstr "অফিসের ভবন তৈরি সম্পন্ন হয়েছে"
 msgid "The office building could not be saved. Please, try again."
