--- a/src/Locale/bn_BD/default.po
+++ b/src/Locale/bn_BD/default.po
@@ -50,3 +50,5 @@ msgid "The office warehouse has been updated."
 msgstr "অফিস গুদামঘর সফলভাবে হালনাগাদ করা হয়েছে"
 msgid "The office warehouse could not be updated. Please, try again."
 msgstr "অফিস গুদামঘর তথ্যটি হালনাগাদ করা সম্ভব হয়নি"
+msgid "DGLR"
+msgstr "ভূমি রেকর্ড ও জরিপ অধিদপ্তর"
